@@ -1,4 +1,3 @@
 
 TODO:
-- add localization support
 - add Spanish translation
