@@ -1,4 +1,5 @@
 name = hovercraft_ad
 description = A fun alternative mode of transport.
 author = Stuart Jones (stu)
+min_minetest_version = 5.0
 optional_depends = default, wool, basic_materials
