@@ -9,3 +9,4 @@ next
 - hovercrafts can now be owned & unusable by non-owners
 - made dependencies on default & wool optional (required for craft recipes)
 - changed craft recipe to optionally use basic_materials:motor
+- added localization support
